@@ -27,6 +27,7 @@ set srclibfile ${testfile}-lib.cc
 set executable ${testfile}
 set libfile ${objdir}/${subdir}/${executable}.so
 set binfile ${objdir}/${subdir}/${executable}
+set lib_dlopen [shlib_target_file ${executable}.so]
 
 # Use completely arbitrary file for $libfile source.
 if { [gdb_compile_shlib ${srcdir}/${subdir}/${srclibfile} ${libfile} {debug c++}] != ""
@@ -34,12 +35,14 @@ if { [gdb_compile_shlib ${srcdir}/${subdir}/${srclibfile} ${libfile} {debug c++}
     return -1
 }
 
+gdb_load_shlibs $libfile
+
 if { ![runto_main] } {
     return -1
 }
 
 for {set i 0} {$i < 10} {incr i} {
-    gdb_test "p openlib (\"${libfile}\")" " = 1" "test $i"
+    gdb_test "p openlib (\"${lib_dlopen}\")" " = 1" "test $i"
     # Try to exploit the GDB trashed memory.
     gdb_test "b openlib" {Breakpoint [0-9]+ at .*} "test $i stub 1"
     gdb_test_no_output {delete $bpnum} "test $i stub 2"
